syntax = "proto3";

package workerservice;

message StartRequest {
    string commandName = 1;
    repeated string Arguments = 2;
}
  
message StartResponse {
    string jobID = 1;
    int32 pid = 2;
    bool success = 3;
    string message = 4;
}
  
message StopRequest {
    string jobID = 1;
}
  
message StopResponse {    
    bool success = 1;
    string message = 2;
}
  
message QueryStatusRequest {
    string jobID = 1;
}

enum JobStatus {
    RUNNING = 1;    
    EXITED = 2;
}
  
message QueryStatusResponse {
    int32 pid = 1;
    int32 exitCode = 2;
    string command = 3;
    JobStatus JobStatus = 4;
}
  
message GetOutputRequest {
    string jobID = 1;
}
  
message GetOutputResponse {
    string output = 1;
}

service WorkerService {
    rpc Start(StartRequest) returns (StartResponse);
    rpc Stop(StopRequest) returns (StopResponse);
    rpc QueryStatus(QueryStatusRequest) returns (QueryStatusResponse);
    rpc GetOutput(GetOutputRequest) returns (stream GetOutputResponse);
}